# hmb-svr

./: .editorconfig  .gitignore  Cargo.toml  backend.conf.template  config.json.template  config.tfvars.template  sqlx-data.json
.deploy/: .terraform.lock.hcl  provider.tf  submodules.tf  terraform.tf  variable.tf
.deploy/gke-setup/: networks.tf  output.tf  variable.tf
.deploy/graphgl/: output.tf  service.tf  variable.tf
.deploy/keycloak/: output.tf  service.tf  variable.tf
.docker/: Dockerfile
.github/: CODEOWNERS
.github/workflows/: deploy.yml  docker-build.yml  release.yml  undeploy.yml
.k8s/: deploy.yml
application/: Cargo.toml
application/src/: cli.rs  config.rs  main.rs
auth/: Cargo.toml
auth/src/: keycloak_api.rs  lib.rs  prelude.rs
entity/: Cargo.toml
entity/src/: content.rs  lib.rs  pagenation.rs  prelude.rs  story.rs  story_tag.rs  tag.rs
graph/: Cargo.toml
graph/src/: error.rs  lib.rs  prelude.rs
graph/src/extension/: mod.rs  pg_manager.rs
graph/src/guard/: mod.rs  resource_guard.rs
graph/src/loader/: content.rs  error.rs  mod.rs  story.rs  tag.rs
graph/src/schema/: mod.rs  mutation.rs  query.rs  schema.rs
graph/src/types/: auth_token.rs  content.rs  credential.rs  federated_identity.rs  mod.rs  story.rs  tag.rs  tag_state.rs  token.rs  user.rs  user_consent.rs
