[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keycloak = "21.0"
reqwest = "0.11.18"
axum-keycloak-auth = "0.1.2"
serde = "1"
serde_derive = "1"
async-trait = "0.1"
serde_json = "1"
chrono = "0.4"
tokio = "1"