[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
async-graphql = { version = "5.0.9", features = ["tracing", "uuid", "url", "dataloader", "graphiql", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0" }
itertools = "0.10.5"
delegate = "0.9.0"
tokio = { version = "1.28.2", features = ["full"] }